# govee_mcp_server

./: .gitignore  Dockerfile  README.md  inspector.bat  inspector.sh  pyproject.toml
src/govee_mcp_server/: server.py
tests/: test_server_smoke.py
